Fix deprecated uses of newInstance()